# mcp-acp-extended

./: .pre-commit-config.yaml  README.md  progress.md  pyproject.toml  ui-progress.md
docs/: api_reference.md  architecture.md  auth.md  backend_auth.md  configuration.md  decision_context.md  installation.md  logging.md  policies.md  request_flow_diagrams.md  roadmap.md  security.md  ui.md  usage.md  web-ui.md
docs/logging_specs/: generate_schemas.py
docs/logging_specs/audit/: auth.md  auth.py  auth.schema.json  decisions.md  decisions.py  decisions.schema.json  operations.md  operations.py  operations.schema.json
docs/logging_specs/system/: config_history.md  config_history.py  config_history.schema.json  policy_history.md  policy_history.py  policy_history.schema.json  system.md  system.py  system.schema.json
src/mcp_acp_extended/: __init__.py  config.py  constants.py  exceptions.py  proxy.py
src/mcp_acp_extended/api/: deps.py  errors.py  security.py  server.py
src/mcp_acp_extended/cli/: __init__.py  api_client.py  main.py  prompts.py  startup_alerts.py
src/mcp_acp_extended/pep/: hitl.py  (+7 more)
tests/: test_approval_store.py  test_audit_logging.py  test_auth.py  test_cli.py  test_config.py  test_context.py  test_pep.py  test_policy.py  test_policy_protocol.py  test_policy_reload.py  test_protected_paths.py  test_rate_limiter.py  test_sanitizer.py  test_session.py  test_specificity.py  test_transport.py
tests/api/: test_config_routes.py  test_logs.py  test_pending.py  test_policy_routes.py  test_security.py
tests/cli/: test_api_client.py  test_approvals.py  test_cli.py  test_logs.py  test_sessions.py  test_status.py
web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx
(+194 files in other folders)
